--- a/HotelAdministradorFrontend/src/app/app.component.html
+++ b/HotelAdministradorFrontend/src/app/app.component.html
@@ -57,10 +57,10 @@
                     <div id="submenu-4" class="collapse submenu" style="">
                         <ul class="nav flex-column">
                             <li class="nav-item">
-                                <a class="nav-link" href="pages/cards.html">Reserva<span class="badge badge-secondary">New</span></a>
+                                <a class="nav-link" routerLink="Control_Habitaciones/Reserva">Reserva<span class="badge badge-secondary">New</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="pages/general.html">Check in</a>
+                                <a class="nav-link" routerLink="Control_Habitaciones/Check_in">Check in</a>
                             </li>
                             
                         </ul>
