--- a/HotelAdministradorFrontend/src/app/pages/reserva/registro-reserva/registro-reserva.component.html
+++ b/HotelAdministradorFrontend/src/app/pages/reserva/registro-reserva/registro-reserva.component.html
@@ -1,104 +1,52 @@
+<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
+    <div class="card">
+        <h5 class="card-header">Registro de Reserva</h5>
+        <div class="card-body">
+            <form action="#" id="basicform" data-parsley-validate="">
+                <div class="form-group">
+                    <label for="inputUserName">Nombre y Apellido </label>
+                    <input id="inputUserName" type="text" name="name" data-parsley-trigger="change" required="" placeholder="Enter user name" autocomplete="off" class="form-control">
+                </div>
 
-<div class="row">
-    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-        <div class="page-header">
-            <h2 class="pageheader-title">Form Validations </h2>
-            <p class="pageheader-text">Proin placerat ante duiullam scelerisque a velit ac porta, fusce sit amet vestibulum mi. Morbi lobortis pulvinar quam.</p>
-            <div class="page-breadcrumb">
-                <nav aria-label="breadcrumb">
-                    <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="#" class="breadcrumb-link">Dashboard</a></li>
-                        <li class="breadcrumb-item"><a href="#" class="breadcrumb-link">Forms</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">Form Validations</li>
-                    </ol>
-                </nav>
-            </div>
+                <div class="form-group">
+                    <label for="inputDNI">DNI </label>
+                    <input id="inputDNI" type="DNI" name="DNI" data-parsley-trigger="change" required="" placeholder="Enter DNI" autocomplete="off" class="form-control">
+                </div>
+
+                <div class="form-group">
+                    <label for="inputTelefono">Telefono</label>
+                    <input id="inputTelefono" type="Telefono" name="Telefono" data-parsley-trigger="change" required="" placeholder="Enter Telefono" autocomplete="off" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail">Direccion de correo </label>
+                    <input id="inputEmail" type="email" placeholder="email" required="" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="inpuitFecha">Fecha de llegada</label>
+                      <div>   
+                        <input type="date" id="party" name="party" min="2010-01-01" max="2022-12-31" required>
+                        <span class="validity"></span>
+                      </div>
+                </div>
+
+                <div class="form-group">
+                    <textarea formControlName="message" class="form-control" rows="3" placeholder="Mensaje"></textarea>
+                </div>
+
+                <div class="row">
+                    <div class="col-sm-6 pb-2 pb-sm-4 pb-lg-0 pr-0">
+                        <label class="be-checkbox custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input"><span class="custom-control-label">Remember me</span>
+                        </label>
+                    </div>
+                    <div class="col-sm-6 pl-0">
+                        <p class="text-right">
+                            <button type="submit" class="btn btn-space btn-primary">Submit</button>
+                            <button class="btn btn-space btn-secondary">Cancel</button>
+                        </p>
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
-</div>
-
-
-<div class="row">
-    <!-- ============================================================== -->
-    <!-- validation form -->
-    <!-- ============================================================== -->
-    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-        <div class="card">
-            <h5 class="card-header">Bootstrap Validation Form</h5>
-            <div class="card-body">
-                <form class="needs-validation" novalidate>
-                    <div class="row">
-                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 ">
-                            <label for="validationCustom01">First name</label>
-                            <input type="text" class="form-control" id="validationCustom01" placeholder="First name" value="Mark" required>
-                            <div class="valid-feedback">
-                                Looks good!
-                            </div>
-                        </div>
-                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 ">
-                            <label for="validationCustom02">Last name</label>
-                            <input type="text" class="form-control" id="validationCustom02" placeholder="Last name" value="Otto" required>
-                            <div class="valid-feedback">
-                                Looks good!
-                            </div>
-                        </div>
-                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 ">
-                            <label for="validationCustomUsername">Username</label>
-                            <div class="input-group">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text" id="inputGroupPrepend">@</span>
-                                </div>
-                                <input type="text" class="form-control" id="validationCustomUsername" placeholder="Username" aria-describedby="inputGroupPrepend" required>
-                                <div class="invalid-feedback">
-                                    Please choose a username.
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-row">
-                        <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 mb-2">
-                            <label for="validationCustom03">City</label>
-                            <input type="text" class="form-control" id="validationCustom03" placeholder="City" required>
-                            <div class="invalid-feedback">
-                                Please provide a valid city.
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 mb-2">
-                            <label for="validationCustom04">State</label>
-                            <input type="text" class="form-control" id="validationCustom04" placeholder="State" required>
-                            <div class="invalid-feedback">
-                                Please provide a valid state.
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 mb-2">
-                            <label for="validationCustom05">Zip</label>
-                            <input type="text" class="form-control" id="validationCustom05" placeholder="Zip" required>
-                            <div class="invalid-feedback">
-                                Please provide a valid zip.
-                            </div>
-                        </div>
-                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                            <div class="form-group">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-                                    <label class="form-check-label" for="invalidCheck">
-                                        Agree to terms and conditions
-                                    </label>
-                                    <div class="invalid-feedback">
-                                        You must agree before submitting.
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 ">
-                            <button class="btn btn-primary" type="submit">Submit form</button>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-    <!-- ============================================================== -->
-    <!-- end validation form -->
-    <!-- ============================================================== -->
 </div>
